[project]
name = "openmlhub"
version = "0.0.0"
authors = [
  { name="Pegerto Fernandez", email="pegerto@gmail.com" },
]
description = "A python client for openmlhub repository"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",

    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

dynamic = ["dependencies"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[project.urls]
"Homepage" = "https://github.com/pegerto/openmlhub-client"
"Bug Tracker" = "https://github.com/pegerto/openmlhub-client"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
